--- a/index.html
+++ b/index.html
@@ -135,23 +135,21 @@
                 </div>
               </div>
             </section-->
-            <!--section class="section section-narrow-2">
+            <section class="section section-narrow-2">
               <div class="container">
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>A research scientist in machine learning and computer vision, Boqing Gong is a Principal Researcher in the Tencent AI Lab at Seattle. Before this, he spent two and a half years in University of Central Florida as a tenure-track Assistant Professor. He is interested in developing data-efficient learning algorithms
-
-
-                    the General Atlantic Professor of Marketing and Ormond Family Faculty at Stanford University’s Graduate School of Business. Her research spans time, money and happiness. She focuses on questions such as: What actually makes people happy, as opposed to what they think makes them happy?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor.sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    <p>A research scientist in machine learning and computer vision, I am interested in developing data-efficient algorithms to solve large-scale visual recognition and planning problems. My recent research has been focusing on domain adaptation, reinforcement learning, semi-supervised and self-supervised learning, few-shot and zero-shot learning, deep learning, generative models, learning from the Web, and the visual analytics of objects, human activities, scenes, and their attributes.
+                    <br><br>	
+					I am a Principal Researcher in Tencent AI Lab at Seattle. Before that, I was a tenure-track Assistant Professor in University of Central Florida (UCF). I received a Ph.D. degree in Computer Science from the University of Southern California in 2015, where my work was partially supported by the Viterbi Fellowship. I received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. I actively serve on NSF panels and the program committees of computer vision conferences (CVPR, ICCV, ECCV, etc.) and machine learning conferences (ICML, NIPS, AISTATS, etc.). I was an area chair of IEEE WACV'18 and a mentor of its PhD forum.</p>
                   </div>
-                  <div class="col-md-3">
+                  <!--div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="#" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
-                  </div>
+                  </div-->
                 </div>
               </div>
-            </section-->
+            </section>
             <section class="section bg-gray section-narrow-2">
               <div class="container">
                 <div class="row">
@@ -163,8 +161,8 @@
                       <div class="col-md-6">
                         <div class="icon-box ib-edu"><i class="oli oli-diploma"></i>
                           <div class="ib-wrap">
-                            <h3 class="title">Bachelor in Eletronic Information Engineering</h3><span class="subtitle">University of Science and Technology of China</span>
-                            <div class="description"> <span>2004-2008</span></div>
+                            <h3 class="title">Ph.D. in Computer Science</h3><span class="subtitle">University of Southern California</span>
+                            <div class="description"> <span>2011-2015</span></div>
                           </div>
                         </div>
                       </div>
@@ -182,8 +180,8 @@
                       <div class="col-md-6">
                         <div class="icon-box ib-edu"><i class="oli oli-diploma"></i>
                           <div class="ib-wrap">
-                            <h3 class="title">Ph.D. in Computer Science</h3><span class="subtitle">University of Southern California</span>
-                            <div class="description"> <span>2011-2015</span></div>
+                            <h3 class="title">Bachelor in Eletronic Information Engineering</h3><span class="subtitle">University of Science and Technology of China</span>
+                            <div class="description"> <span>2004-2008</span></div>
                           </div>
                         </div>
                       </div>
