--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <div class="heading-with-sub">
                       <h3 class="title with-sideline">Research</h3>
                       <p class="lead"> A research scientist in machine learning and computer vision, I am interested in developing data-efficient algorithms to solve large-scale visual recognition problems. My recent research has been focusing on domain adaptation, semi-supervised and self-supervised learning, few-shot and zero-shot learning, deep learning, generative models, learning from the Web, and the visual analytics of objects, human activities, scenes, and their attributes.</p>
-                    </div><a class="btn btn-small btn-round m-top-5"><span>read more</span></a>
+                    </div><a href="research.html" class="btn btn-small btn-round m-top-5"><span>read more</span></a>
                   </div>
                   <div class="col-md-9">
                     <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
