--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>A research scientist in machine learning and computer vision, I am interested in developing data-efficient algorithms to solve large-scale visual recognition and planning problems. My recent research has been focusing on domain adaptation, reinforcement learning, semi-supervised and self-supervised learning, few-shot and zero-shot learning, deep learning, generative models, learning from the Web, and the visual analytics of objects, human activities, scenes, and their attributes.
+                    <p>A research scientist in machine learning and computer vision, I am interested in building an intelligent agent that can understand and act upon the environment. My recent research has been focusing on the agent's visual analytics of objects, human activities, scenes, and their attributes.
                     <br><br>	
-					I am a Principal Researcher in Tencent AI Lab at Seattle. Before that, I was a tenure-track Assistant Professor in University of Central Florida (UCF). I received a Ph.D. degree in Computer Science from the University of Southern California in 2015, where my work was partially supported by the Viterbi Fellowship. I received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. I actively serve on NSF panels and the program committees of computer vision conferences (CVPR, ICCV, ECCV, etc.) and machine learning conferences (ICML, NIPS, AISTATS, etc.). I was an area chair of IEEE WACV'18 and a mentor of its PhD forum.</p>
+					          I am a Principal Researcher in Tencent AI Lab at Seattle. Before that, I was a tenure-track Assistant Professor in University of Central Florida (UCF). I received a Ph.D. degree in Computer Science from the University of Southern California in 2015, where my work was partially supported by the Viterbi Fellowship. I received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. I actively serve on NSF panels and the program committees of computer vision conferences (CVPR, ICCV, ECCV, etc.) and machine learning conferences (ICML, NIPS, AISTATS, etc.). I was an area chair of IEEE WACV'18 and a mentor of its PhD forum.</p>
                   </div>
                   <!--div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="#" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
@@ -204,12 +204,12 @@
                   <div class="col-md-3">
                     <div class="heading-with-sub">
                       <h3 class="title with-sideline">Research</h3>
-                      <p class="lead"> A research scientist in machine learning and computer vision, I am interested in developing data-efficient algorithms to solve large-scale visual recognition problems. My recent research has been focusing on domain adaptation, semi-supervised and self-supervised learning, few-shot and zero-shot learning, deep learning, generative models, learning from the Web, and the visual analytics of objects, human activities, scenes, and their attributes.</p>
+                      <p class="lead"> A research scientist in machine learning and computer vision, I am interested in developing novel algorithms to understand objects, human activities, scenes, and their attributes. </p>
                     </div><a href="research.html" class="btn btn-small btn-round m-top-5"><span>read more</span></a>
                   </div>
                   <div class="col-md-9">
                     <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
-                    	<a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="Domain Adaptation / Transfer Learning"></div><h3 class="features-title">Domain Adaptation/Transfer Learning</h3></a>
+                    	<a href="papers/cvpr12.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="Domain Adaptation / Transfer Learning"></div><h3 class="features-title">Domain Adaptation/Transfer Learning</h3></a>
                         
                         <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/02.jpg" alt="image"></div><h3 class="features-title">Zero-/Few-shot Learning</h3></a>
 
