--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="content-side shadow">
                       <div class="inner-wrapper">
                         <h2 class="title">Boqing Gong</h2>
-                        <h2 class="subtitle">Ph.D.<span class="text-uppercase"></span></h2>
+                        <h2 class="subtitle">Ph.D.<br>Tencent AI Lab, Seattle<span class="text-uppercase"></span></h2>
                       </div>
                     </div>
                   </div>
