--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="content-side shadow">
                       <div class="inner-wrapper">
                         <h2 class="title">Boqing Gong</h2>
-                        <h2 class="subtitle">Ph.D.<br>Tencent AI Lab, Seattle<span class="text-uppercase"></span></h2>
+                        <h2 class="subtitle">Principal Researcher<br>Tencent AI Lab, Seattle<span class="text-uppercase"></span></h2>
                       </div>
                     </div>
                   </div>
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>A research scientist in machine learning and computer vision, I am interested in building an intelligent agent that can understand and act upon the environment. My recent research has been focusing on the agent's visual analytics of objects, human activities, scenes, and their attributes.
+                    <p>Recent research interests: domain adaptation, reinforcement learning, and visual analytics of objects, human activities, scenes, and their attributes.
                     <br><br>	
 					          I am a Principal Researcher in Tencent AI Lab at Seattle. Before that, I was a tenure-track Assistant Professor in University of Central Florida (UCF). I received a Ph.D. degree in Computer Science from the University of Southern California in 2015, where my work was partially supported by the Viterbi Fellowship. I received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. I actively serve on NSF panels and the program committees of computer vision conferences (CVPR, ICCV, ECCV, etc.) and machine learning conferences (ICML, NIPS, AISTATS, etc.). I was an area chair of IEEE WACV'18 and a mentor of its PhD forum.</p>
                   </div>
