--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                     <p>I am a Principal Researcher of Tencent AI Lab at Seattle, working on machine learning and computer vision. Before joining Tencent, I was a tenure-track Assistant Professor in University of Central Florida (UCF). My research in UCF was supported in part by an NSF CRII award (so-PI, received in 2016) and an NSF BIGDATA award (PI, received in 2017), both of which were the first of their kinds ever granted to UCF. I actively serve on NSF panels and the program committees of computer vision conferences (CVPR, ICCV, ECCV, etc.) and machine learning conferences (ICML, NIPS, AISTATS, etc.). I was an area chair of IEEE WACV'18 and a mentor of its PhD forum. In 2015, I received a Ph.D. degree in Computer Science from the University of Southern California, where my work was partially supported by the Viterbi Fellowship.</p>
                     <p><b>Recent research interests: domain adaptation, reinforcement learning, and visual analytics of objects, human activities, scenes, and their attributes.</b></p>
                   </div>
-                  <!--div class="col-md-3">
-                    <h3 class="with-sideline">CV</h3><a href="#" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
-                  </div-->
+                  <div class="col-md-3">
+                    <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
+                  </div>
                 </div>
               </div>
             </section>
