--- a/publications.html
+++ b/publications.html
@@ -208,6 +208,15 @@ http://themeforest.net/user/owwwlab/
                       </div>
                     </div>
                   </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;TOMM</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="#">Learning a Multi-Concept Video Retrieval Model with Multiple Latent Variables</a> * </h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="#">ACM Transactions on Multimedia Computing, Communications, and Applications <b>(TOMM)</b> 2018 </a><span class="block-elem">A Mazaheri, <b>B Gong</b>, and M Shah</span></span></div>
+                      </div>
+                    </div>
+                  </div>
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2017</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
                     <div class="content-wrapper">
