--- a/index.html
+++ b/index.html
@@ -149,6 +149,69 @@
                 </div>
               </div>
             </section>
+            <section class="bg-gray no-space-grid">
+              <div class="container">
+                <div class="row extend-bg-wrapper no-space-grid h-500">
+                  <div class="col-md-4">
+                    <div class="set-bg extend-left hidden-sm"><img src="assets/img/bg/light-01.jpg" alt="background-image" class="set-me"></div>
+                    <div class="row">
+                      <div class="col-md-9">
+                        <div class="inner-wrapper m-top-80">
+                          <div class="heading-with-sub">
+                            <h3 class="title with-sideline"><font color="blue">What's New</font></h3>
+                            <p class="lead"></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div data-start-from="center" data-fade-edge="true" class="ol-timeline-tab">
+                      <ul class="tl-head">
+                        <li>2018</li>
+                        <!--li>1998</li>
+                        <li>2000</li>
+                        <li>2005</li>
+                        <li>2006</li>
+                        <li>2008</li>
+                        <li>2010</li>
+                        <li>2013</li>
+                        <li>2015</li-->
+                      </ul>
+                      <div class="tl-content">
+                        <div class="tl-item">
+                          <h4 class="title">Eight Papers published in 2018</h4>
+                          <div class="description"> 
+                            <p>
+                              Three in IEEE CVPR, two in ECCV, one in ICLR, one in ACM TOMM, and one in IEEE WACV.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+
+                          <h4 class="title">11/2018: Talk on INFORMS Special Session on Stochastic Optimization Methods and Approximation Theory in Machine Learning</h4>
+                          <div class="description"> 
+                            <p>
+                            	<b>"The Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks".</b> Dropout, which independently zeros out the outputs of neurons at random, has become one of the most popular techniques in training deep neural networks due to its simplicity and remarkable effectiveness. This talk reveals multiple shades of dropout for both discriminative and generative deep neural networks, mainly covering ours papers <a href="https://papers.nips.cc/paper/6561-improved-dropout-for-shallow-and-deep-learning">[Li et al., NIPS'16]</a> and <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="#"><i class="icon oi-forward"></i><span>Slides coming soon</span></a>
+                          </div>
+
+                          <h4 class="title">06/2018: Talk on CVPR The 2nd Workshop on Visual Understanding by Learning from Web Data</h4>
+                          <div class="description"> 
+                            <p>
+                            	<b>"Learning from Web Data and Adapting Beyond It",</b> which inlcudes the Web data of 1) noisy labels, 2) accurate labels, and 3) multi-modalities by semi-supervised learning, curriculum learning, and kernel mean matching, respectively. It mainly covers our papers <a href="papers/wacv18.pdf">[Ding et al., WACV'18]</a>, <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>, <a href="papers/cvpr18-geometry-cnn.pdf">[Gan et al., CVPR'18]</a>, <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">[Zhang et al., ICCV'17]</a>, <a href="papers/eccv16-webly.pdf">[Gan et al., ECCV'16]</a>, and <a href="https://arxiv.org/abs/1607.05177">[Sharghi et al., ECCV'16]</a>.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/Web-learning.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
+                          </div>
+                          <h4 class="title">01/2018: Joined Tencent AI Lab (Seattle)</h4>
+                          
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
             <section class="section bg-gray section-narrow-2">
               <div class="container">
                 <div class="row">
