--- a/publications.html
+++ b/publications.html
@@ -173,6 +173,24 @@ http://themeforest.net/user/owwwlab/
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="#">How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization</a> * [<a href="#">Supplementary</a>]</h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b> 2018 </a><span class="block-elem">Y Li, L Wang, T Yang, and <b>B Gong</b></span></span></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="#">Improving Sequential Determinantal Point Processes for Supervised Video Summarization</a> * [<a href="#">Supplementary</a>]</h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b> 2018 </a><span class="block-elem">A Sharghi, A Borji, C Li, T Yang, and <b>B Gong</b></span></span></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
                       <h3 class="title"><a href="papers/cvpr18-deep-face.pdf">Face Detector Adaptation without Negative Transfer or Catastrophic Forgetting</a> * [<a href="papers/cvpr18-deep-face-supp.pdf">Supplementary</a>]</h3>
@@ -195,7 +213,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="papers/cvpr18-tvnet.pdf">End-to-End Learning of Motion Representation for Video Understanding</a> [<a href="papers/cvpr18-tvnet-supp.pdf">Supplementary</a>]</h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr18-tvnet.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a> <b><font color="blue">(Spotlight)</font></b><span class="block-elem">L Fan, W Huang, C Gan, S Ermon, J Huang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-tvnet.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a> <b><font color="blue">(Spotlight)</font></b><span class="block-elem">L Fan, W Huang, C Gan, S Ermon, <b>B Gong</b>, and J Huang</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -211,9 +229,9 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;TOMM</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">Learning a Multi-Concept Video Retrieval Model with Multiple Latent Variables</a> * </h3>
+                      <h3 class="title"><a href="papers/tomm.pdf">Learning a Multi-Concept Video Retrieval Model with Multiple Latent Variables</a> * </h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="#">ACM Transactions on Multimedia Computing, Communications, and Applications <b>(TOMM)</b> 2018 </a><span class="block-elem">A Mazaheri, <b>B Gong</b>, and M Shah</span></span></div>
+                        <div class="citation"><span> <a href="papers/tomm.pdf">ACM Transactions on Multimedia Computing, Communications, and Applications <b>(TOMM)</b> 2018 </a><span class="block-elem">A Mazaheri, <b>B Gong</b>, and M Shah</span></span></div>
                       </div>
                     </div>
                   </div>
