--- a/index.html
+++ b/index.html
@@ -168,7 +168,13 @@
                   <div class="col-md-8">
                     <div data-start-from="center" data-fade-edge="true" class="ol-timeline-tab">
                       <ul class="tl-head">
+                        <li></li>
+                        <li></li>
+                        <li></li>
                         <li>2018</li>
+                        <li>2017</li>
+                        <li>2016</li>
+                        <li>2015</li>
                         <!--li>1998</li>
                         <li>2000</li>
                         <li>2005</li>
@@ -179,33 +185,118 @@
                         <li>2015</li-->
                       </ul>
                       <div class="tl-content">
+
+                        <div class="tl-item"></div>
+                        <div class="tl-item"></div>
+                        <div class="tl-item"></div>
+
                         <div class="tl-item">
-                          <h4 class="title">Eight Papers published in 2018</h4>
+                          <h5 class="title">Eight Papers Published in 2018</h5>
                           <div class="description"> 
                             <p>
-                              Three in IEEE CVPR, two in ECCV, one in ICLR, one in ACM TOMM, and one in IEEE WACV.
+                              Three at IEEE CVPR, two at ECCV, one at ICLR, one at ACM TOMM, and one at IEEE WACV.
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
-
-                          <h4 class="title">11/2018: Talk on INFORMS Special Session on Stochastic Optimization Methods and Approximation Theory in Machine Learning</h4>
+                          <h5 class="title">11/2018: Talk at INFORMS Special Session on Stochastic Optimization Methods and Approximation Theory in Machine Learning</h5>
                           <div class="description"> 
                             <p>
-                            	<b>"The Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks".</b> Dropout, which independently zeros out the outputs of neurons at random, has become one of the most popular techniques in training deep neural networks due to its simplicity and remarkable effectiveness. This talk reveals multiple shades of dropout for both discriminative and generative deep neural networks, mainly covering ours papers <a href="https://papers.nips.cc/paper/6561-improved-dropout-for-shallow-and-deep-learning">[Li et al., NIPS'16]</a> and <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>.
+                              <b>"The Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks".</b> Dropout, which independently zeros out the outputs of neurons at random, has become one of the most popular techniques in training deep neural networks due to its simplicity and remarkable effectiveness. This talk reveals multiple shades of dropout for both discriminative and generative deep neural networks, mainly covering our following works: <a href="https://papers.nips.cc/paper/6561-improved-dropout-for-shallow-and-deep-learning">[Li et al., NIPS'16]</a> and <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>.
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="#"><i class="icon oi-forward"></i><span>Slides coming soon</span></a>
                           </div>
-
-                          <h4 class="title">06/2018: Talk on CVPR The 2nd Workshop on Visual Understanding by Learning from Web Data</h4>
+                          <h5 class="title">06/2018: Talk at CVPR The 2nd Workshop on Visual Understanding by Learning from Web Data</h5>
                           <div class="description"> 
                             <p>
-                            	<b>"Learning from Web Data and Adapting Beyond It",</b> which inlcudes the Web data of 1) noisy labels, 2) accurate labels, and 3) multi-modalities by semi-supervised learning, curriculum learning, and kernel mean matching, respectively. It mainly covers our papers <a href="papers/wacv18.pdf">[Ding et al., WACV'18]</a>, <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>, <a href="papers/cvpr18-geometry-cnn.pdf">[Gan et al., CVPR'18]</a>, <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">[Zhang et al., ICCV'17]</a>, <a href="papers/eccv16-webly.pdf">[Gan et al., ECCV'16]</a>, and <a href="https://arxiv.org/abs/1607.05177">[Sharghi et al., ECCV'16]</a>.
+                              <b>"Learning from Web Data and Adapting Beyond It",</b> which inlcudes the Web data of 1) noisy labels, 2) accurate labels, and 3) multi-modalities by semi-supervised learning, curriculum learning, and kernel mean matching, respectively. It mainly covers our following works: <a href="papers/wacv18.pdf">[Ding et al., WACV'18]</a>, <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>, <a href="papers/cvpr18-geometry-cnn.pdf">[Gan et al., CVPR'18]</a>, <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">[Zhang et al., ICCV'17]</a>, <a href="papers/eccv16-webly.pdf">[Gan et al., ECCV'16]</a>, and <a href="https://arxiv.org/abs/1607.05177">[Sharghi et al., ECCV'16]</a>.
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/Web-learning.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
                           </div>
-                          <h4 class="title">01/2018: Joined Tencent AI Lab (Seattle)</h4>
-                          
+                          <h5 class="title">05/2018: Be serving as an Area Chair for IEEE WACV 2019</h5>
+                          <h5 class="title">01/2018: Joined Tencent AI Lab (Seattle)</h5>
                         </div>
+
+                        <div class="tl-item">
+                          <h5 class="title">Seven Papers Published in 2017 </h5>
+                          <div class="description"> 
+                            <p>
+                              Two at CVPR, two at ICCV, two book chapters, and one at ACII.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">10/2017: Talk at Department of Computer Engineering, University of California at Santa Cruz</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"Domain Adaptation for Robust Visual Recognition".</b> It is about our following works: <a href="http://proceedings.mlr.press/v28/gong13.html">[Gong, et al., ICML'13]</a>,  <a href="papers/eccv16-webly.pdf">[Gan et al., ECCV'16]</a>, <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Gan_Learning_Attributes_Equals_CVPR_2016_paper.html">[Gan et al., CVPR'16]</a>, and <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">[Zhang et al., ICCV'17]</a>.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/domain-adaptation.pdf"><i class="icon oi-forward"></i><span>read more: slides</span></a>
+                          </div>
+                          <h5 class="title">08/2017: Received the Third NSF Award as a PI </h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"BIGDATA: IA: Distributed Semi-Supervised Training of Deep Models and Its Applications in Video Understanding" (transferred to Mubarak Shah and Liqiang Wang).</b> This project investigates semi-supervised training of deep neural network models using large-scale labeled and unlabeled data in a distributed fashion.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1741431"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">07/2017: Selected as One of the Outstanding Reviewers by the IEEE CVPR 2017 Organization Committee</h5>
+                          <h5 class="title">05/2017: Received the Second Gift Grant from Adobe Research</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>for our researcho on "Face Detector Adaptation without Forgetting".</b>
+                            </p>
+                          </div>
+                        </div>
+
+                        <div class="tl-item">
+                          <h5 class="title">Served as a panelist for two NSF panels in 2016</h5>
+
+                          <h5 class="title">Eight Papers Published in 2016</h5>
+                          <div class="description"> 
+                            <p>
+                              Three at IEEE CVPR, three at ECCV, one at NIPS, and one at Symposium Multemedia.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">10/2016: Received the Second NSF Award as a Co-PI</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>Project: "Collaborative Research: Florida-IT-Pathways to Success (Flit-Path)".</b>
+                            </p>
+                          </div>
+                          <h5 class="title">10/2016: Received a Gift Grant from Adobe Research</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>for our researcho on "User-Guided Visual Analytics".</b>
+                            </p>
+                          </div>
+                          <h5 class="title">09/2016: Talk at the Army Research Office / Information Science Institute Workshop on Multi-Modal Data Analysis for Human Activity Detection</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"Domain Adaptation Approaches to Human Activity Detection, Recognition, and Summarization".</b>
+                            </p>
+                          </div>
+                          <h5 class="title">03/2016: Received My First NSF Award as a So-PI</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"CRII: RI: Multi-Source Domain Generalization Approaches to Visual Attribute Detection".</b> This project investigates how to accurately and robustly detect attributes from images (videos, and 3D data), with the goal of developing and publicly providing effective attribute detection tools.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1566511"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                        </div>
+
+                        <div class="tl-item">
+                          <h5 class="title">12/2015: Talk at the AI Seminar of Information Science Institute, University of Southern California</h5>
+                          <h5 class="title">11/2015: Talk at the ICDM Workshop on Practical Transfer Learning</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"Reshaping Datasets for Unsupervised Domain Adaptation"</b>, which is about our following works: <a href="papers/cvpr12.pdf">[Gong et al., CVPR'12]</a>, <a href="http://proceedings.mlr.press/v28/gong13.html">[Gong, et al., ICML'13]</a>, and <a href="https://papers.nips.cc/paper/5210-reshaping-visual-datasets-for-domain-adaptation">[Gong et al., NIPS'13]</a>.
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/reshaping-ICDM-Workshop.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
+                          </div>
+                          <h5 class="title">08/2015: Joined University of Central Florida as an Assistant Professor (tenure-track)</h5>
+                          <h5 class="title">06/2015: Defended Ph.D. thesis</h5>
+                        </div>
+
                       </div>
                     </div>
                   </div>
